# github-actions-rust

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust-ci.yml
app/: main.rs  routes.rs
k8s/: deployment.yaml  service.yaml
src/: main.rs
