[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"         # Framework web (como FastAPI)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }  # Para async runtime si se necesita
[patch.crates-io]
litemap = "=0.7.4"